src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <description>Type of loan</description>
        <inlineHelpText>Type of loan</inlineHelpText>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIDL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Verification_Contact_Phone__c</fullName>
        <label>Loss Verification Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Loss_Verification_Contact__c</fullName>
        <description>Contact for loss verification.</description>
        <inlineHelpText>Contact for loss verification.</inlineHelpText>
        <label>Loss Verification Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_Interest_Rate__c</fullName>
        <formula>IF( ISPICKVAL(Credit_Elsewhere_Test__c,&quot;&quot;), Disaster_Declaration__r.Low_Interest_Rate__c,(IF(ISPICKVAL(Credit_Elsewhere_Test__c,&quot;Market Rate&quot;), Disaster_Declaration__r.High_Interest_Rate__c,  Disaster_Declaration__r.Low_Interest_Rate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MAFD_Formula_Percetange__c</fullName>
        <formula>Monthly_Fixed_Debt__c/ Gross_Monthly_Income_rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAFD% DO NOT USE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MAFD_Thresholds__c</fullName>
        <formula>IF( Gross_Annual_Income2__c  &lt;= 25000, 0.36, (IF(Gross_Annual_Income2__c  &gt;  25000, 0.4,null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAFD Thresholds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MAFD__c</fullName>
        <description>Monthly Allowed Fixed Debt</description>
        <label>MAFD%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manual_Exception__c</fullName>
        <description>List of Manual exceptions to decide Final Approval Authority for the Approval process</description>
        <label>Manual Exception</label>
        <picklist>
            <picklistValues>
                <fullName>Other reason for ACDAP decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Judgment Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal occupancy on leased land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACE, SCORE, NON-ODA EMPLOYEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other reason for CD/PDC decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recon of initial size determination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal is delinquent in child support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other reason for AA/DA decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner is Member of Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACE, SCORE, SBA Employee With Potential Conflict</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_File_Number__c</fullName>
        <label>Master File Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Refinance_Eligibility__c</fullName>
        <label>Maximum Refinance Eligibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Decline Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Decisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obligation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Income_Guideline__c</fullName>
        <formula>IF( Gross_Annual_Income2__c  &gt;=  Minimum_Income__c , &quot;Pass&quot;, &quot;Fail&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Income Guideline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Income__c</fullName>
        <label>Minimum Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mitigation_Amount__c</fullName>
        <label>Mitigation Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mitigation_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mitigation Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Fixed_Debt__c</fullName>
        <label>Monthly Fixed Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_to_Payment_Start__c</fullName>
        <formula>Floor((First_Payment_Date__c - Loan_Date__c)/30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months to Payment Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Team_Owned__c</fullName>
        <formula>Owner:User.Manager.Id = $User.Id
||
OwnerId = $User.Id
||
Owner:User.Manager.ManagerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEMIS_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NEMIS shows primary residence</description>
        <label>NEMIS Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIFRA_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NIFRA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Character_Issues_Pending__c</fullName>
        <description>This is one of the criteria for Applicant Eligibility Test</description>
        <label>No Character Issues Pending</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Other_Assistance_Received_from_FEMA__c</fullName>
        <description>This field is one of the criteria for Miscellaneous Exception Test</description>
        <inlineHelpText>No other Assistance received for &quot;&quot;Miscellaneous&quot;&quot; from FEMA</inlineHelpText>
        <label>No Other Assistance Received from FEMA</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_an_SBA_Employee__c</fullName>
        <description>This field is one of the criteria for Miscellaneous Exception Test</description>
        <label>Not an SBA Employee</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_of_Primary_Applicants__c</fullName>
        <label>Num of Primary Applicants</label>
        <summaryFilterItems>
            <field>Applicant__c.Primary_Applicant__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Applicant__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Create_Date__c</fullName>
        <description>Original Create Date</description>
        <label>Original Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Submission_Date__c</fullName>
        <label>Original Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Percent_Of_Damage_As_Per_Rule_Of_40__c</fullName>
        <label>Percent Of Damage As Per Rule Of 40%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Of_Damage_As_Per_Rule_Of_50__c</fullName>
        <label>Percent Of Damage As Per Rule Of 50%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phys_Damage_Filing_Deadline__c</fullName>
        <label>Phys Damage Filing Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Applications (Previous Application)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Convictions_Details__c</fullName>
        <label>Previous Convictions Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Convictions__c</fullName>
        <label>Previous Convictions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Federal_Loans__c</fullName>
        <description>Question on application: I have never had any other Federal loans or Federally guaranteed loans, except</description>
        <inlineHelpText>I have never had any other Federal loans or Federally guaranteed loans, except:</inlineHelpText>
        <label>Previous Federal Loans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Felonies_Details__c</fullName>
        <label>Previous Felonies Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Felonies__c</fullName>
        <label>Previous Felonies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Judgments_Lawsuits__c</fullName>
        <inlineHelpText>I have no judgments or lawsuits pending against me, except:</inlineHelpText>
        <label>Previous Judgments / Lawsuits</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_SBA_Loans__c</fullName>
        <inlineHelpText>I have never had an SBA loan or an SBA guaranteed loan, except:</inlineHelpText>
        <label>Previous SBA Loans</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Name__c</fullName>
        <label>Primary Applicant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Residence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Residence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Wage_Earner_Credit_Score__c</fullName>
        <description>Field rolls up the credit score of the Applicant labeled as Primary Wage Earner. The Primary Wage Earner is the Applicant with the highest Total Stated Individual Gross Annual Income</description>
        <inlineHelpText>Credit score of the Applicant labeled as Primary Wage Earner</inlineHelpText>
        <label>Primary Wage Earner Credit Score</label>
        <summarizedField>Applicant__c.Credit_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Applicant__c.Primary_Wage_Earner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Applicant__c.Application__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Principal_Amount__c</fullName>
        <description>The principal Loan amount, using the Eligible Physical Loss</description>
        <inlineHelpText>The principal Loan amount, using the Eligible Physical Loss</inlineHelpText>
        <label>Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proceed_To__c</fullName>
        <description>Loan Officer sets this field which triggers automated actions depending on the value</description>
        <inlineHelpText>Documents pending, proceed to &apos;Commitment&apos;. All documents received, proceed to &apos;Closing&apos;.</inlineHelpText>
        <label>Proceed To</label>
        <picklist>
            <picklistValues>
                <fullName>Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Damaged_As_Per_Rule_Of_40__c</fullName>
        <label>Property Damaged As Per Rule Of 40%</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Damaged_As_Per_Rule_Of_50__c</fullName>
        <label>Property Damaged As Per Rule Of 50%</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Eligibility_Test__c</fullName>
        <formula>IF(ISPICKVAL(Disaster_Declaration__r.Disaster_Type__c,&quot;Presidential&quot;)&amp;&amp;
 (Property_Owned_by_Applicant_s__c = TRUE &amp;&amp;
 Primary_Residence__c = TRUE &amp;&amp;
 Address_Match_Eligilibity__c = TRUE &amp;&amp;
 NIFRA_Compliant__c = TRUE &amp;&amp;
 Sanctioned_Community__c = FALSE &amp;&amp;
 CBRA_or_OPA__c = FALSE &amp;&amp; 
 NEMIS_Primary__c = TRUE &amp;&amp;
(NOT(ISPICKVAL( Damaged_Property_Type__c,&quot;Co-Op&quot;)) || 
NOT(ISPICKVAL( Damaged_Property_Type__c,&quot;Boat&quot;)) ||
NOT(ISPICKVAL( Damaged_Property_Type__c,&quot;Vessel&quot;)) || 
NOT(ISPICKVAL( Damaged_Property_Type__c,&quot;Vacant Land&quot;)))),&quot;Pass&quot;,
IF(Property_Owned_by_Applicant_s__c = TRUE &amp;&amp;
 Primary_Residence__c = TRUE &amp;&amp;
 Address_Match_Eligilibity__c = TRUE &amp;&amp;
 NIFRA_Compliant__c = TRUE &amp;&amp;
 Sanctioned_Community__c = FALSE &amp;&amp;
 CBRA_or_OPA__c = FALSE &amp;&amp;
(NOT(ISPICKVAL( Damaged_Property_Type__c,&quot;Co-Op&quot;)) || 
NOT(ISPICKVAL( Damaged_Property_Type__c,&quot;Boat&quot;)) ||
NOT(ISPICKVAL( Damaged_Property_Type__c,&quot;Vessel&quot;)) || 
NOT(ISPICKVAL( Damaged_Property_Type__c,&quot;Vacant Land&quot;))),&quot;Pass&quot;,&quot;Fail&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Eligibility Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owned_by_Applicant_s__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Eligibility test</description>
        <label>Property Owned by Applicant(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Other__c</fullName>
        <label>Real Estate (Other)</label>
        <summarizedField>Processing_Application_Review__c.Total_Real_Estate_Other__c</summarizedField>
        <summaryForeignKey>Processing_Application_Review__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Repair_Replace__c</fullName>
        <label>Real Estate (Repair/Replace)</label>
        <summarizedField>Processing_Application_Review__c.Total_Real_Estate_Repair_Replace__c</summarizedField>
        <summaryForeignKey>Processing_Application_Review__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reassign_to_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used strictly for users to reassign the record back to the queue it was before it was assigned to him/her</description>
        <label>Reassign to Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refinance_Amount__c</fullName>
        <label>Refinance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBA_Account_Number__c</fullName>
        <inlineHelpText>SBA account (loan) number</inlineHelpText>
        <label>SBA Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBA_Employee_Details__c</fullName>
        <label>SBA Employee Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBA_Employee_Ind__c</fullName>
        <description>Does any owner, owner&apos;s spouse, or household member work for SBA or serve as a member of SBA&apos;s SCORE, ACE, or Advisory Council?</description>
        <inlineHelpText>Does any owner, owner&apos;s spouse, or household member work for SBA or serve as a member of SBA&apos;s SCORE, ACE, or Advisory Council?</inlineHelpText>
        <label>SBA Employee?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBA_Employee__c</fullName>
        <label>SBA Employee</label>
        <summaryFilterItems>
            <field>Applicant__c.SBA_Employee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Applicant__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBA_Office_Location__c</fullName>
        <description>Question on Application: SBA office location, and account (loan) number</description>
        <inlineHelpText>SBA office location, and account (loan) number</inlineHelpText>
        <label>SBA Office Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanctioned_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Evaluate on the negative - A false value is desired. Property is not a sanctioned community and SFHA.</description>
        <label>Sanctioned Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicing_Office__c</fullName>
        <label>Servicing Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seven_Day_Letter_Date__c</fullName>
        <label>7 Day Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_1_3_of_Cash_Available__c</fullName>
        <formula>Standard_Cash_Available__c * 0.333</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard 1/3 of Cash Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Cash_Available__c</fullName>
        <formula>( Gross_Monthly_Income_rollup__c *  MAFD_Thresholds__c )-  Monthly_Fixed_Debt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Cash Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Decline - Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Decline – Credit/Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Decline – Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Documents Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not System Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Lead Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO Recommend Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO Recommend Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO Recommend Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communicate Conditional Approval to Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBR Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBR Requested</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submit CBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order CBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received CBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAPID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptable Credit/Repayment Justified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit Auto Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Auto Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Team Lead Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Drafting Attorney Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Higher Legal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting ACDAP Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting CDPDC Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting AADA Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Lead Not Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACDAP Not Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDPDC Not Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AADA Not Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Attorney Not Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Legal Not Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Required Approvals Concurred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Attorney Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Attorney In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Attorney Review Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Legal Review Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Legal Review Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Legal Review in Progress</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspended_Debarred_Details__c</fullName>
        <inlineHelpText>Provide details if applicant or co-applicant been suspended or disbarred from contracting with the Federal Government or receiving federal loans or grants?</inlineHelpText>
        <label>Suspended / Debarred Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Suspended_Debarred__c</fullName>
        <description>Has the applicant or co-applicant been suspended or disbarred from contracting with the Federal Government or receiving federal loans or grants?</description>
        <inlineHelpText>Has the applicant or co-applicant been suspended or disbarred from contracting with the Federal Government or receiving federal loans or grants?</inlineHelpText>
        <label>Suspended / Debarred</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Decision__c</fullName>
        <label>System Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Secured Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsecured Loan</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TEST_STEVE_H_ACCEPT__c</fullName>
        <formula>CASE(Status__c, &quot;Accepted&quot;, 1, &quot;Auto Decline - Credit&quot;, 0, &quot;Auto Decline – Credit/Repayment&quot;, 0, &quot;Auto Decline – Repayment&quot;, 0,null)</formula>
        <label>TEST_STEVE_H_ACCEPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEST_STEVE_H_AGE__c</fullName>
        <description>Number of days since creation</description>
        <formula>DATEVALUE(NOW()) - Original_Submission_Date__c</formula>
        <inlineHelpText>Number of days since creation</inlineHelpText>
        <label>Age Since Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Lead_Approver__c</fullName>
        <label>Team Lead Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Available_Assets__c</fullName>
        <description>All assets associated to the applications</description>
        <label>Total Available Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_Physical_Loss__c</fullName>
        <label>Total Eligible Physical Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Worth__c</fullName>
        <formula>Total_Available_Assets__c -  Monthly_Fixed_Debt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trigger_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>U_S_Citizen__c</fullName>
        <description>Is the applicant or co-applicant a U.S. Citizen?</description>
        <inlineHelpText>Is the applicant or co-applicant a U.S. Citizen?</inlineHelpText>
        <label>U.S. Citizen</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uploaded_by_Sonia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded by Sonia</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>